@@ -30,7 +30,7 @@ class TestDbApiHook(unittest.TestCase):
     def setUp(self):
         super().setUp()
 
-        self.cur = mock.MagicMock()
+        self.cur = mock.MagicMock(rowcount=0)
         self.conn = mock.MagicMock()
         self.conn.cursor.return_value = self.cur
         conn = self.conn
@@ -184,3 +184,37 @@ class TestDbApiHook(unittest.TestCase):
         statement = 'SQL'
         self.db_hook.run(statement)
         assert self.db_hook.log.info.call_count == 2
+
+    def test_run_with_handler(self):
+        sql = 'SQL'
+        param = ('p1', 'p2')
+        called = 0
+        obj = object()
+
+        def handler(cur):
+            cur.execute.assert_called_once_with(sql, param)
+            nonlocal called
+            called += 1
+            return obj
+
+        result = self.db_hook.run(sql, parameters=param, handler=handler)
+        assert called == 1
+        assert self.conn.commit.called
+        assert result == obj
+
+    def test_run_with_handler_multiple(self):
+        sql = ['SQL', 'SQL']
+        param = ('p1', 'p2')
+        called = 0
+        obj = object()
+
+        def handler(cur):
+            cur.execute.assert_called_with(sql[0], param)
+            nonlocal called
+            called += 1
+            return obj
+
+        result = self.db_hook.run(sql, parameters=param, handler=handler)
+        assert called == 2
+        assert self.conn.commit.called
+        assert result == [obj, obj]
